fix summary on mobile and some namedex mega issues

--- a/src/app/util/matchup/summary-core/summary-core.component.scss
+++ b/src/app/util/matchup/summary-core/summary-core.component.scss
@@ -1,7 +1,8 @@
 :host {
   display: block;
   width: 100%;
-  overflow: hidden;
+  overflow-x: auto;
+  padding-right: 2px;
 }
 
 td {
